# s3-backup

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
src/: arch.rs  main.rs
