[package]
name = "s3-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["s3"] }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
lambda_runtime = "0.7"
serde = "1.0.136"
urlencoding = "2.1.2"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

